a1/brendan_gordon/TEST_PROGRAMS/invalidtype/xiru_zhu/invalid2.min
var test: float;
var test1: int;

test = test1; #valid

test = test + test;


test1 = test; #invalid

